Update tests for StatefulViewController with more helpful comments. Adjust assertion throwing

--- a/Example/Reinstate.xcodeproj/xcshareddata/xcschemes/Reinstate-Example.xcscheme
+++ b/Example/Reinstate.xcodeproj/xcshareddata/xcschemes/Reinstate-Example.xcscheme
@@ -40,7 +40,25 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B231C588D3806CD0873A8089B9FE0ECB"
+            BuildableName = "Reinstate.framework"
+            BlueprintName = "Reinstate"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACE41AFB9204008FA782"
+            BuildableName = "Reinstate_Tests.xctest"
+            BlueprintName = "Reinstate_Tests"
+            ReferencedContainer = "container:Reinstate.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
